@@ -1,6 +1,8 @@
 v3.5.1 (XXXX-XX-XX)
 -------------------
 
+* Don't create temporary directories named "arangosh_XXXXXX" anymore.
+
 * Add TransactionStatistics to ServerStatistics (transactions started /
   aborted / committed and number of intermediate commits).
 
